fix spacing issue in about features section of landing page

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -41,15 +41,19 @@
   height: 100%;
   text-align: center;
   margin: 0 auto;
+  padding-bottom: 20px;
+  // feature image section
   .feature {
-    height: 150px;
+    height: 200px;
     width: 300px;
     margin-top: 30px;
+    margin-bottom: 10px;
+  }
+  h4 {
+    text-transform: uppercase;
   }
   p {
-    width: 75%;
+    width: 70%;
     margin: 0 auto;
-    margin-top: 10px;
-    margin-bottom: 20px;
   }
 }
